--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwn0zhD5q2ZdV6w2uc40vY",
+      "authorship_tag": "ABX9TyND1JigN5SPJUltWTx3t2Ga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,38 +110,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "9AWyAGFzOZ30"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python --version"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dWjf2tC1TPmX",
-        "outputId": "e1886990-c126-4464-d0ac-c2e448bb3a4e"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Python 3.8.10\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "!git clone https://github.com/ljtamang/codeBERT-QG.git"
       ],
@@ -150,24 +118,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l694QXfL-Uxv",
-        "outputId": "67f82ffd-d656-4608-b45d-ed704bdec6a7"
+        "outputId": "773616a6-8bd5-4b16-b782-9758087e624b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'codeBERT-QG'...\n",
-            "remote: Enumerating objects: 101, done.\u001b[K\n",
-            "remote: Counting objects: 100% (41/41), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (34/34), done.\u001b[K\n",
-            "remote: Total 101 (delta 17), reused 23 (delta 7), pack-reused 60\u001b[K\n",
-            "Receiving objects: 100% (101/101), 79.98 MiB | 20.83 MiB/s, done.\n",
-            "Resolving deltas: 100% (25/25), done.\n"
+            "remote: Enumerating objects: 126, done.\u001b[K\n",
+            "remote: Counting objects: 100% (66/66), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (59/59), done.\u001b[K\n",
+            "remote: Total 126 (delta 29), reused 23 (delta 7), pack-reused 60\u001b[K\n",
+            "Receiving objects: 100% (126/126), 79.99 MiB | 22.91 MiB/s, done.\n",
+            "Resolving deltas: 100% (37/37), done.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Navigate inside the recently downloaded codeBERT-QG project folder"
+      ],
+      "metadata": {
+        "id": "NUHSNiw5amwk"
+      }
     },
     {
       "cell_type": "code",
@@ -180,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZyA5rzWq9zsO",
-        "outputId": "228b7d2f-6f26-4f6b-9b11-b8e7be69299f"
+        "outputId": "9814cd9a-6619-4857-80d0-2c86f54c3c4e"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,45 +167,6 @@
           "text": [
             "/content/codeBERT-QG\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# check ram\n",
-        "#!cat /proc/meminfo\n",
-        "\n",
-        "# List device allocated by google collab\n",
-        "#from tensorflow.python.client import device_lib\n",
-        "#device_lib.list_local_devices() \n",
-        "\n",
-        "# Test if GUP is enabled\n",
-        "import tensorflow as tf\n",
-        "tf.test.gpu_device_name()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "eAQ_T-ssT1ke",
-        "outputId": "295ea9f2-9c0a-4fa1-d619-3290ca0537cd"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/device:GPU:0'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 1
         }
       ]
     },
@@ -243,66 +181,52 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKxlAA1JD9qi",
-        "outputId": "6a0da0b2-2d3e-4cff-a8b7-e7c6acc00d0f"
+        "outputId": "6b238e53-0cdc-4799-fbfb-e0741961591b"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/usr/local/lib/python3.8/dist-packages/torch/cuda/__init__.py:497: UserWarning: Can't initialize NVML\n",
-            "  warnings.warn(\"Can't initialize NVML\")\n",
-            "WARNING:__main__:Process rank: -1, device: cpu, n_gpu: 0, distributed training: False\n",
-            "model_name_or_path: microsoft/codebert-base\n",
-            "tokenizer_name : \n",
-            "False\n",
-            "roberta\n",
-            "None\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Run the Test\n",
-        "!bash java_script_test.sh 0 cbQG"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ghuwcDAaOr6F",
-        "outputId": "b4f25cec-8100-41ef-81dd-c8d9783d6ace"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/usr/local/lib/python3.8/dist-packages/torch/cuda/__init__.py:497: UserWarning: Can't initialize NVML\n",
-            "  warnings.warn(\"Can't initialize NVML\")\n",
-            "WARNING:__main__:Process rank: -1, device: cpu, n_gpu: 0, distributed training: False\n",
-            "Downloading (…)lve/main/config.json: 100% 498/498 [00:00<00:00, 34.2kB/s]\n",
-            "Downloading (…)olve/main/vocab.json: 100% 899k/899k [00:00<00:00, 1.73MB/s]\n",
-            "Downloading (…)olve/main/merges.txt: 100% 456k/456k [00:00<00:00, 1.06MB/s]\n",
-            "Downloading (…)cial_tokens_map.json: 100% 150/150 [00:00<00:00, 57.2kB/s]\n",
-            "Downloading (…)okenizer_config.json: 100% 25.0/25.0 [00:00<00:00, 9.67kB/s]\n",
-            "Downloading (…)\"pytorch_model.bin\";: 100% 499M/499M [00:04<00:00, 101MB/s]\n",
-            "Traceback (most recent call last):\n",
-            "  File \"run.py\", line 669, in <module>\n",
-            "    main()\n",
-            "  File \"run.py\", line 313, in main\n",
-            "    model.load_state_dict(torch.load(args.load_model_path))\n",
-            "  File \"/usr/local/lib/python3.8/dist-packages/torch/serialization.py\", line 771, in load\n",
-            "    with _open_file_like(f, 'rb') as opened_file:\n",
-            "  File \"/usr/local/lib/python3.8/dist-packages/torch/serialization.py\", line 270, in _open_file_like\n",
-            "    return _open_file(name_or_buffer, mode)\n",
-            "  File \"/usr/local/lib/python3.8/dist-packages/torch/serialization.py\", line 251, in __init__\n",
-            "    super(_open_file, self).__init__(open(name, mode))\n",
-            "FileNotFoundError: [Errno 2] No such file or directory: '../output/cbQG/checkpoint-best-bleu/pytorch_model.bin'\n"
+            "WARNING:__main__:Process rank: -1, device: cuda, n_gpu: 1, distributed training: False\n",
+            "model_class: <class 'transformers.models.roberta.modeling_roberta.RobertaModel'>\n",
+            "args.model_name_or_path: microsoft/codebert-base\n",
+            "config: RobertaConfig {\n",
+            "  \"_name_or_path\": \"microsoft/codebert-base\",\n",
+            "  \"architectures\": [\n",
+            "    \"RobertaModel\"\n",
+            "  ],\n",
+            "  \"attention_probs_dropout_prob\": 0.1,\n",
+            "  \"bos_token_id\": 0,\n",
+            "  \"classifier_dropout\": null,\n",
+            "  \"eos_token_id\": 2,\n",
+            "  \"hidden_act\": \"gelu\",\n",
+            "  \"hidden_dropout_prob\": 0.1,\n",
+            "  \"hidden_size\": 768,\n",
+            "  \"initializer_range\": 0.02,\n",
+            "  \"intermediate_size\": 3072,\n",
+            "  \"layer_norm_eps\": 1e-05,\n",
+            "  \"max_position_embeddings\": 514,\n",
+            "  \"model_type\": \"roberta\",\n",
+            "  \"num_attention_heads\": 12,\n",
+            "  \"num_hidden_layers\": 12,\n",
+            "  \"output_past\": true,\n",
+            "  \"pad_token_id\": 1,\n",
+            "  \"position_embedding_type\": \"absolute\",\n",
+            "  \"transformers_version\": \"4.26.0\",\n",
+            "  \"type_vocab_size\": 1,\n",
+            "  \"use_cache\": true,\n",
+            "  \"vocab_size\": 50265\n",
+            "}\n",
+            "\n",
+            "config.hidden_size: 768\n",
+            "config.num_attention_heads: 12\n",
+            "args.beam_size: 10\n",
+            "args.max_target_length: 30\n",
+            "tokenizer.cls_token_id: 0\n",
+            "tokenizer.sep_token_id: 2\n",
+            "args.load_model_path: None\n"
           ]
         }
       ]
@@ -311,7 +235,37 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "1lykOGJZil2u"
+        "id": "eKBqby1biS--"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run the Test\n",
+        "#!bash java_script_test.sh 0 cbQG"
+      ],
+      "metadata": {
+        "id": "ghuwcDAaOr6F"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_cYJnsKFpzyb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "s-gavMgep0LO"
       },
       "execution_count": null,
       "outputs": []
@@ -319,34 +273,94 @@
     {
       "cell_type": "code",
       "source": [
-        "from __future__ import absolute_import\n",
-        "import os\n",
-        "import sys\n",
-        "import bleu\n",
-        "import pickle\n",
         "import torch\n",
-        "import json\n",
-        "import random\n",
-        "import logging\n",
-        "import argparse\n",
-        "import numpy as np\n",
-        "from io import open\n",
-        "from itertools import cycle\n",
-        "from collections import OrderedDict, Counter\n",
-        "import torch.nn as nn\n",
-        "from model import Seq2Seq\n",
-        "from tqdm import tqdm, trange\n",
-        "from torch.utils.data import DataLoader, Dataset, SequentialSampler, RandomSampler,TensorDataset\n",
-        "from torch.utils.data.distributed import DistributedSampler\n",
-        "from transformers import (WEIGHTS_NAME, AdamW, get_linear_schedule_with_warmup,\n",
-        "                          RobertaConfig, RobertaModel, RobertaTokenizer)\n",
-        "from eval.bleu import corpus_bleu\n",
-        "from eval.rouge import Rouge\n",
-        "from eval.meteor import Meteor\n",
-        "MODEL_CLASSES = {'roberta': (RobertaConfig, RobertaModel, RobertaTokenizer)}\n"
+        "print(torch.cuda.device_count())\n",
+        "print(torch.cuda.device_count())\n",
+        "\n",
+        "# check ram\n",
+        "#!cat /proc/meminfo\n",
+        "\n",
+        "# List device allocated by google collab\n",
+        "#from tensorflow.python.client import device_lib\n",
+        "#device_lib.list_local_devices() \n",
+        "\n",
+        "# Test if GUP is enabled\n",
+        "import tensorflow as tf\n",
+        "tf.test.gpu_device_name()\n",
+        "\n",
+        "\n",
+        "# args.output_dir : ../output/cbQG\n",
+        "# args.load_model_path : None\n",
+        "# args.local_rank : -1\n",
+        "# args.no_cuda : False\n",
+        "# args.seed : 42\n",
+        "# args.model_type : roberta\n",
+        "# WARNING:__main__:Process rank: -1, device: cuda, n_gpu: 1, distributed training: False\n",
+        "# Downloading (…)lve/main/config.json: 100% 498/498 [00:00<00:00, 88.7kB/s]\n",
+        "# Downloading (…)olve/main/vocab.json: 100% 899k/899k [00:00<00:00, 2.88MB/s]\n",
+        "# Downloading (…)olve/main/merges.txt: 100% 456k/456k [00:00<00:00, 1.48MB/s]\n",
+        "# Downloading (…)cial_tokens_map.json: 100% 150/150 [00:00<00:00, 62.7kB/s]\n",
+        "# Downloading (…)okenizer_config.json: 100% 25.0/25.0 [00:00<00:00, 10.2kB/s]\n",
+        "# config_class : <class 'transformers.models.roberta.configuration_roberta.RobertaConfig'>\n",
+        "# model_class : <class 'transformers.models.roberta.modeling_roberta.RobertaModel'>\n",
+        "# tokenizer_class : <class 'transformers.models.roberta.tokenization_roberta.RobertaTokenizer'>\n",
+        "# args.config_name : \n",
+        "# args.model_name_or_path : microsoft/codebert-base\n",
+        "# args.tokenizer_name: \n",
+        "# args.do_lower_case: False\n",
+        "# args.max_target_length : 30\n",
+        "# args.n_gpu : 1\n",
+        "# args.do_train : True\n",
+        "# args.train_filename : ../data/java/train/\n",
+        "# args.train_batch_size : 32\n",
+        "# args.gradient_accumulation_steps : 1\n",
+        "# args.train_steps : -1\n",
+        "# args.num_train_epochs : 20\n",
+        "# args.learning_rate : 5e-05\n",
+        "# args.adam_epsilon : 1e-08\n",
+        "# args.train_batch_size : 32\n",
+        "# args.do_eval : True\n",
+        "# args.do_test : True\n",
+        "\n"
       ],
       "metadata": {
-        "id": "zb0jnn2sHegF"
+        "id": "YDKSZWdQiFlh",
+        "outputId": "1e62a59d-6422-4d4a-f958-5b956a33fdbb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/device:GPU:0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1lykOGJZil2u"
       },
       "execution_count": null,
       "outputs": []
